# Obsoletium

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .slnitems  BUILDING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  ONBOARDING.md  README.md  SECURITY.md  build_game_thirdparty.bat  build_vpc.bat  clang-format-all.sh  clean_everything.bat  create_all_projects.bat  create_everything_x64.bat  create_everything_x86.bat  create_game_projects.bat  create_hammer.bat  create_hammer_x64.bat  create_hammer_x86.bat  create_hl2_dev.bat  create_hl2_dev_x64.bat  create_hl2_dev_x86.bat  create_hl2_ep1_2_dev.bat  create_hl2_ep1_2_dev_x64.bat  create_hl2_ep1_2_dev_x86.bat  create_hl2_loastcoast_dev_x64.bat  create_hl2_loastcoast_dev_x86.bat  create_hl2_mp_dev_x64.bat  create_hl2_mp_dev_x86.bat  create_portal_dev.bat  create_portal_dev_x64.bat  create_portal_dev_x86.bat  create_shader_compiler.bat  create_shader_compiler_project_x64.bat  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
appframework/: AppSystemGroup.cpp  VguiMatSysApp.cpp  WinApp.cpp  appframework.vpc  glmdisplaydb_linuxwin.inl  glmrendererinfo_osx.mm  posixapp.cpp  sdlmgr.cpp
bitmap/: ImageByteSwap.cpp  bitmap.cpp  bitmap.vpc  colorconversion.cpp  float_bm.cpp  float_bm2.cpp  float_bm3.cpp  float_bm4.cpp  float_bm_bilateral_filter.cpp  float_cube.cpp  imageformat.cpp  psd.cpp  resample.cpp  tgaloader.cpp  tgawriter.cpp
common/: ClientNetMessage.h  ConfigManager.cpp  ConfigManager.h  FindSteamServers.h  IAdminServer.h  IFileSystemOpenDialog.h  IManageServer.h  IObjectContainer.h  IRunGameEngine.h  IVguiModule.h  SourceAppInfo.cpp  SourceAppInfo.h  SteamAppStartup.cpp  ValidateNewValveCDKeyClient.h  com_ptr.h  compiledcaptionswap.cpp  crypto.cpp  crypto.h  cserserverprotocol_engine.h  cstringhash.h  debug_dll_check.cpp  debug_lib_check.cpp  engine_launcher_api.h  igameserverdata.h  imageloadwrapper.cpp  imageutils.cpp  imageutils.h  info_key.cpp  ivprofexport.h  jpegloader.cpp  jpegloader.h  jpegloader_common.cpp  language.cpp  language.h  netapi.cpp  netapi.h  netmessages.cpp  netmessages.h  pngloader.cpp  posix_file_stream.h  (+16 more)
datacache/: datacache.cpp  datacache.h  datacache.vpc  mdlcache.cpp  resource.h
datamodel/: DmElementFramework.cpp  DmElementFramework.h  clipboardmanager.cpp  datamodel.cpp  datamodel.h  datamodel.vpc  dependencygraph.cpp  dmattribute.cpp  dmattributeinternal.h  dmelement.cpp  dmelementdictionary.cpp  dmelementdictionary.h  dmserializerbinary.cpp  dmserializerbinary.h  dmserializerkeyvalues.cpp  dmserializerkeyvalues.h  dmserializerkeyvalues2.cpp  dmserializerkeyvalues2.h  undomanager.cpp  undomanager.h
dedicated/: args_win.cpp  args_win.h  dedicated.h  dedicated.rc  dedicated.vpc  filesystem.cpp  isys.h  isystem.h  resource.h  sys_common.cpp  sys_ded.cpp  sys_linux.cpp  sys_windows.cpp
dedicated_main/: dedicated_main.rc  dedicated_main.vpc  enable-visual-styles.manifest  main_posix.cpp  main_win.cpp  resource.h
dmserializers/: dmebaseimporter.h  dmserializers.cpp  dmserializers.vpc  importactbusy.cpp  importkeyvaluebase.cpp  importkeyvaluebase.h  importsfmv1.cpp  importsfmv2.cpp  importsfmv3.cpp  importsfmv4.cpp  importsfmv5.cpp  importsfmv6.cpp  importsfmv7.cpp  importsfmv8.cpp  importsfmv9.cpp  importvmf.cpp  importvmt.cpp
dmxloader/: dmxattribute.cpp  dmxelement.cpp  dmxloader.cpp  dmxloader.vpc  dmxloadertext.cpp  dmxserializationdictionary.cpp  dmxserializationdictionary.h
engine/: DevShotGenerator.cpp  DevShotGenerator.h  DownloadListGenerator.cpp  DownloadListGenerator.h  EngineSoundClient.cpp  EngineSoundServer.cpp  GameEventManager.cpp  GameEventManagerOld.cpp  LoadScreenUpdate.cpp  LocalNetworkBackdoor.cpp  LocalNetworkBackdoor.h  MapReslistGenerator.cpp  MapReslistGenerator.h  MaterialBuckets.h  ModelInfo.cpp  NetworkStringTableItem.cpp  OcclusionSystem.cpp  Overlay.cpp  Session.cpp  Session.h  accessibility_shortcut_keys_toggler.cpp  accessibility_shortcut_keys_toggler.h  baseautocompletefilelist.cpp  baseclient.cpp  baseclient.h  baseclientstate.cpp  baseclientstate.h  baseserver.cpp  baseserver.h  bugreporter.cpp  buildcubemaps.cpp  cbenchmark.cpp  cbenchmark.h  ccs.cpp  cdll_engine_int.cpp  cheatcodes.cpp  cheatcodes.h  checksum_engine.cpp  cl_check_process.cpp  cl_demo.cpp  (+257 more)
fgdlib/: gamedata.cpp  gdclass.cpp  gdvar.cpp  inputoutput.cpp  wckeyvalues.cpp
filesystem/: QueuedLoader.cpp  basefilesystem.cpp  basefilesystem.h  filesystem_async.cpp  filesystem_stdio.cpp  filesystem_stdio.vpc  filesystem_steam.cpp  filetracker.cpp  filetracker.h  linux_support.cpp  linux_support.h  packfile.cpp  packfile.h  resource.h  threadsaferefcountedobject.h
game/: protobuf_include.vpc
gameui/: BackgroundMenuButton.cpp  BasePanel.cpp  BasePanel.h  BaseSaveGameDialog.cpp  BaseSaveGameDialog.h  BenchmarkDialog.cpp  BenchmarkDialog.h  BitmapImagePanel.cpp  BitmapImagePanel.h  BonusMapsDatabase.cpp  BonusMapsDatabase.h  BonusMapsDialog.cpp  BonusMapsDialog.h  CDKeyEntryDialog.cpp  CDKeyEntryDialog.h  ChangeGameDialog.cpp  CommentaryDialog.cpp  CommentaryDialog.h  CommentaryExplanationDialog.cpp  CommentaryExplanationDialog.h  ContentControlDialog.cpp  ContentControlDialog.h  ControllerDialog.h  CreateMultiplayerGameBotPage.cpp  CreateMultiplayerGameBotPage.h  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameDialog.h  CreateMultiplayerGameGameplayPage.cpp  CreateMultiplayerGameServerPage.cpp  CreateMultiplayerGameServerPage.h  CustomTabExplanationDialog.cpp  CustomTabExplanationDialog.h  CvarNegateCheckButton.h  CvarTextEntry.cpp  CvarTextEntry.h  CvarToggleCheckButton.cpp  CvarToggleCheckButton.h  GameConsole.cpp  GameConsole.h  GameConsoleDialog.cpp  (+66 more)
gcsdk/: gcbase.cpp  gcclient.cpp  gcclient_sharedobjectcache.cpp  gcinterface.cpp  gcjob.cpp  gclogger.cpp  gcsdk_game.vpc  gcsdk_gcmessages_include.vpc  gcsystemaccess.cpp  http.cpp  job.cpp  jobmgr.cpp  messagelist.cpp  msgprotobuf.cpp  netpacketpool.cpp  protobufsharedobject.cpp  sharedobject.cpp  sharedobjectcache.cpp  steammessages_include.vpc  webapi_response.cpp  workthreadpool.cpp
hammer/: AnchorMgr.h  (+381 more)
(+4304 files in other folders)
